Issue #4 : Vertically aligned text

--- a/assets/sass/partials/_view.scss
+++ b/assets/sass/partials/_view.scss
@@ -5,3 +5,19 @@
 .views-view-grid .row {
   margin-bottom: 1em;
 }
+
+// Lange Kurser
+// --------------------------------------------------
+.view-lange-kurser {
+  .media-left {
+    width: 200px;
+    height: 200px;
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+  .media-body {
+    vertical-align: middle;
+  }
+}
